ingress.yaml
---
  apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    name: gotify
    namespace: gotify
    annotations:
      kubernetes.io/ingress.class: traefik-external
  spec:
    entryPoints:
      - web
    routes:
      - match: Host(`gotify.44.201.109.120.slip.io`)
        kind: Rule
        services:
          - name: gotify
            port: 80
