versions.yaml
# clemenko
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: versions
  labels:
    app: versions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: versions
  template:
    metadata:
      labels:
        app: versions
    spec:
      containers:
      - name: versions
        image: clemenko/dzver
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: versions
  name: versions
spec:
  selector:
    app: versions
  ports:
  - name: versions
    protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: versions
spec:
  rules:
  - host: versions.44.201.109.120.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: versions
            port:
              number: 5000
